tweak flexbox stuff to avoid cutting off red square with `overflow: hidden;`

--- a/style.css
+++ b/style.css
@@ -97,16 +97,21 @@ form.multiplechoice {
 }
 label.multiplechoiceIMG {
     padding: 10px;
-    flex-grow: 1;
-    flex-basis: content;
+    /*flex-grow: 1;*/
+    /*flex-basis: content;*/
+    width: 20%;
+    height: 15%;
     max-width: 33%;
     max-height: 30%;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 img.multiplechoiceimage {
     max-width: 100%;
     max-height: 100%;
     margin: 0 auto;
+    display: block;
+    width: auto;
+    height: auto;
 }
 
 label.multiplechoiceColor {
@@ -210,7 +215,7 @@ textarea {
 
     }
     label.multiplechoiceIMG {
-        max-width: 80%;
+        width: 80%;
         max-height: 50%;
     }
     form#continue {  padding-top: 10%;}
